--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link nav-link-main" href="/">Portal <span class="sr-only">(current)</span></a>
+                    <a class="nav-link nav-link-main" href="/menu">Portal <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle nav-link-main" href="#" id="navbarDropdownMenuLink" role="button"
