--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,7 @@
     {% if 'tipo' in session and session['tipo'] == 'admin' %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/admin_page/{{ session['id_user'] }}">Admin</a>
+            <a class="navbar-brand" href="">Admin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -118,6 +118,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin_page/{{ session['id_user'] }}" class="notification">
+                            <span>Inbox</span>
+                            <span class="badge"> {{ forms|length }}
+                            </span>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link  " href="/new-post">Create New Post</a>
                     </li>
