--- a/templates/admin_page.html
+++ b/templates/admin_page.html
@@ -5,24 +5,36 @@
 </div>
 
 <body>
-    <div class="mt-5">
-        <ul>
-            {% for form in forms %}
-            {% if loop.index0 % 3 == 0 %}
-            <div class="row justify-content-center">
-                {% endif %}
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box">
-                        <i class="fas fa-chalkboard"></i>
-                        <h3><a href="/form/{{ form[0] }}">{{ form[1] }}</a></h3>
-                        <p>Resumo</p>
+    <div class="container-fluid">
+        <div class="mt-5">
+            <ul>
+                {% for form in forms %}
+                {% if loop.index0 % 4 == 0 %}
+                <div class="row justify-content-center">
+                    {% endif %}
+                    <div class="col-lg-3 col-md-6 mb-4">
+                        <div class="feature-box">
+                            <i class="fas fa-chalkboard"></i>
+                            <h3><a href="/form/{{ form[0] }}">{{ form[1] }}</a></h3>
+                            {% if form[3] %}
+                            {% if form[3].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
+                            {% set file_path = form[3].split('static', 1)[-1].lstrip('\\/') %}
+                            <figure class="text-center">
+                                <img width="200" height="200" src="{{ '../static/' ~ file_path }}" alt="">
+                            </figure>
+                            {%endif%}
+                            {%endif%}
+                        </div>
                     </div>
+                    {% if loop.index0 % 4 == 3 or loop.last %}
                 </div>
-                {% if loop.index0 % 3 == 2 or loop.last %}
-            </div>
-            {% endif %}
-            {% endfor %}
-        </ul>
-    </div>
+                {% endif %}
+                {% if loop.last and loop.index0 % 4 != 3 %}
+                {% for i in range(4 - loop.index0 % 4 - 1) %}
+                <div class="col-lg-3 col-md-6 mb-4"></div>
+                {% endfor %}
+                {% endif %}
+                {% endfor %}
+            </ul>
 </body>
 {%endblock%}
