--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,6 @@
     </form>
     <p></p>
     <p>Não tem uma conta? <a href="/register">Registe-se</a></p>
-    <p>Esqueceu da sua palavra passe? <a href="#">Clique aqui</a> </p>
+    <p>Esqueceu da sua palavra passe? <a href="{{ url_for('reset_password') }}">Clique aqui</a> </p>
 </div>
 {%endblock%}
