--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -6,10 +6,31 @@
   <h1>Edite Post</h1>
   <form method="post" enctype="multipart/form-data">
     <div class="form-group">
+      <label for="discipline">Select a discipline:</label>
+      <br>
+      <label for="discipline_math">
+        <input type="radio" id="calculo_analise" name="subject" value="calculo_analise" required>
+        Cálculo e Análise
+      </label>
+      <label for="discipline_science">
+        <input type="radio" id="algebra" name="subject" value="algebra">
+        Álgebra
+      </label>
+      <label for="discipline_history">
+        <input type="radio" id="estatistica" name="subject" value="estatistica">
+        Estatística
+      </label>
+      <label for="discipline_language">
+        <input type="radio" id="analise_numerica" name="subject" value="analise_numerica">
+        Análise Numérica
+      </label>
+    </div>
+
+    <div class="form-group">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" placeholder="Title" value="{{ post[1] }}" required>
     </div>
-    
+
     <div class="form-group">
       <label for="thumbnail">Thumbnail:</label>
       <input type="file" id="thumbnail" name="thumbnail">
@@ -27,7 +48,7 @@
 
     <div class="form-group">
       <label for="author">Author:</label>
-      <input type="text" id="author" name="author" placeholder="Author" value="{{ post[5] }}" required > 
+      <input type="text" id="author" name="author" placeholder="Author" value="{{ post[5] }}" required>
     </div>
 
     <div class="form-group">
@@ -48,7 +69,7 @@
       <label for="download">Download:</label>
       <input type="text" id="download" name="download" placeholder="Download" value="{{ post[10] }}">
     </div>
-  
+
     <button type="reset">Reset</button>
     <button type="submit">Submit</button>
   </form>
