--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -6,6 +6,27 @@
   <h1>Create New Post</h1>
   <form method="post" action="/new-post" enctype="multipart/form-data">
     <div class="form-group">
+      <label for="discipline">Select a discipline:</label>
+      <br>
+      <label for="discipline_math">
+        <input type="radio" id="calculo_analise" name="subject" value="calculo_analise" required>
+        Cálculo e Análise
+      </label>
+      <label for="discipline_science">
+        <input type="radio" id="algebra" name="subject" value="algebra">
+        Álgebra
+      </label>
+      <label for="discipline_history">
+        <input type="radio" id="estatistica" name="subject" value="estatistica">
+        Estatística
+      </label>
+      <label for="discipline_language">
+        <input type="radio" id="analise_numerica" name="subject" value="analise_numerica">
+        Análise Numérica
+      </label>
+    </div>
+
+    <div class="form-group">
       <label for="title">Title:</label>
       <input type="text" id="title" name="title" placeholder="Title" required>
     </div>
@@ -53,5 +74,4 @@
     <button type="submit">Submit</button>
   </form>
 </div>
-
 {% endblock %}
