--- a/templates/form.html
+++ b/templates/form.html
@@ -108,6 +108,7 @@
         <input type="hidden" name="links" value="{{ post[9] }}">
         <input type="hidden" name="download" value="{{ post[10] }}">
         <input type="hidden" name="date" value="{{ post[11] }}">
+        <input type="hidden" name="subject" value="{{ post[12] }}">
         <button type="submit" class="btn btn-success">Aprovar</button>
       </form>
       <form method="post" action="/delete">
