--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -67,7 +67,7 @@
 
     <div class="form-group">
       <label for="download">Download:</label>
-      <input type="text" id="download" name="download" placeholder="Download" value="{{ post[10] }}">
+      <input type="file" id="download" name="download" placeholder="Download" value="{{ post[10] }}">
     </div>
 
     <button type="reset">Reset</button>
