--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -67,7 +67,7 @@
 
     <div class="form-group">
       <label for="download">Download:</label>
-      <input type="text" id="download" name="download" placeholder="Download">
+      <input type="file" id="download" name="download" placeholder="Download">
     </div>
 
     <button type="reset">Reset</button>
