--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -67,10 +67,9 @@
 
     <div class="form-group">
       <label for="download">Download:</label>
-      <input type="file" id="download" name="download" placeholder="Download" value="{{ post[10] }}">
+      <input type="file" id="download" name="download">
     </div>
 
-    <button type="reset">Reset</button>
     <button type="submit">Submit</button>
   </form>
 </div>
