--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="form-group">
-      <label for="snapshots_1">Snapshots 1</label>
+      <label for="snapshots_1">Snapshots 1:</label>
       <input type="file" id="snapshots_1" name="snapshots_1">
       <label for="snapshots_2">Snapshot 2:</label>
       <input type="file" id="snapshots_2" name="snapshots_2">
@@ -67,7 +67,7 @@
 
     <div class="form-group">
       <label for="download">Download:</label>
-      <input type="file" id="download" name="download" placeholder="Download">
+      <input type="file" id="download" name="download">
     </div>
 
     <button type="reset">Reset</button>
