--- a/static/style.css
+++ b/static/style.css
@@ -140,6 +140,16 @@ textarea[name="content"] {
     width: 1100px;
 }
 
+textarea[name="author"] {
+    height: 100px;
+    width: 1100px;
+}
+
+textarea[name="links"] {
+    height: 100px;
+    width: 1100px;
+}
+
 .container-login {
     background-color: #f8f8f8;
     padding: 20px;
