--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -48,7 +48,7 @@
 
     <div class="form-group">
       <label for="author">Author:</label>
-      <input type="text" id="author" name="author" placeholder="Author" value="{{ post[5] }}" required>
+      <textarea type="text" id="author" name="author" placeholder="Author" required>{{ post[5] }}</textarea>
     </div>
 
     <div class="form-group">
@@ -62,7 +62,7 @@
 
     <div class="form-group">
       <label for="links">Links:</label>
-      <input type="text" id="links" name="links" placeholder="Links" value="{{ post[9] }}">
+      <textarea type="text" id="links" name="links" placeholder="Links">{{ post[9] }}</textarea>
     </div>
 
     <div class="form-group">
