--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -48,7 +48,7 @@
 
     <div class="form-group">
       <label for="author">Author:</label>
-      <input type="text" id="author" name="author" placeholder="Author" required>
+      <textarea type="text" id="author" name="author" placeholder="Author" required></textarea>
     </div>
 
     <div class="form-group">
@@ -62,7 +62,7 @@
 
     <div class="form-group">
       <label for="links">Links:</label>
-      <input type="text" id="links" name="links" placeholder="Links">
+      <textarea type="text" id="links" name="links" placeholder="Links"></textarea>
     </div>
 
     <div class="form-group">
