--- a/templates/post.html
+++ b/templates/post.html
@@ -62,15 +62,18 @@
           <blockquote class="blockquote mb-0">
 
             <div class="row mt-3">
+              {%if post[6]%}
               {% if post[6].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
               <div class="col-md-4">
                 <figure class="text-center">
                   <img width="225" height="225" src="{{ '../static/' ~ post[6].split('static', 1)[-1].lstrip('\\/') }}"
                     alt="">
                 </figure>
-              </div>
+              </div>  
+              {% endif %}
               {% endif %}
 
+              {%if post[7]%}
               {% if post[7].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
               <div class="col-md-4">
                 <figure class="text-center">
@@ -79,7 +82,9 @@
                 </figure>
               </div>
               {% endif %}
+              {% endif %}
 
+              {%if post[8]%}
               {% if post[8].endswith(('jpg', 'jpeg', 'gif', 'png')) %}
               <div class="col-md-4">
                 <figure class="text-center">
@@ -87,6 +92,7 @@
                     alt="">
                 </figure>
               </div>
+              {% endif %}
               {% endif %}
             </div>
         </div>
@@ -148,8 +154,8 @@
       {% endif %}
 
 
-
-      {% if post[10] %}
+      {% if post[10]%}
+      {% if post[10] != "None" %}
       <div class="card">
         <div class="card-header">
           Downloads
@@ -169,7 +175,7 @@
       <br>
       </br>
       {%endif%}
-
+      {%endif%}
     </article>
   </div>
 </main>
