--- a/templates/sabermais.html
+++ b/templates/sabermais.html
@@ -44,6 +44,7 @@
     <img src="../static/perfis/profile_pic.jpg" width="120" height="90" alt="">
     <P></P>
     <p> Bruno Fernandes</p>
+    <img src = "../static/perfis/image.png" width="120" height="90" alt="">
 </div>
 
 <div class="container">
