--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,17 @@
     .image-container {
         display: flex;
         justify-content: center;
-      }
+    }
+
+    .image-container {
+        display: flex;
+        justify-content: center;
+    }
+
+
+    .features-section .row {
+        justify-content: center;
+    }
 </style>
 
 
