--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -8,21 +8,33 @@
     <div class="form-group">
       <label for="discipline">Select a discipline:</label>
       <br>
-      <label for="discipline_math">
-        <input type="radio" id="calculo_analise" name="subject" value="calculo_analise" required>
-        Cálculo e Análise
-      </label>
       <label for="discipline_science">
         <input type="radio" id="algebra" name="subject" value="algebra">
         Álgebra
+      </label>
+      <label for="discipline_language">
+        <input type="radio" id="analise_numerica" name="subject" value="analise_numerica">
+        Análise Numérica
+      </label>
+      <label for="discipline_math">
+        <input type="radio" id="calculo_analise" name="subject" value="calculo_analise" required>
+        Cálculo e Análise
       </label>
       <label for="discipline_history">
         <input type="radio" id="estatistica" name="subject" value="estatistica">
         Estatística
       </label>
-      <label for="discipline_language">
-        <input type="radio" id="analise_numerica" name="subject" value="analise_numerica">
-        Análise Numérica
+      <label for="discipline_history">
+        <input type="radio" id="estatistica" name="subject" value="geometria">
+        Geometria
+      </label>
+      <label for="discipline_history">
+        <input type="radio" id="estatistica" name="subject" value="matematica_discreta">
+        Matemática Discreta
+      </label>
+      <label for="discipline_history">
+        <input type="radio" id="estatistica" name="subject" value="miscelanea">
+        Miscelânea
       </label>
     </div>
 
